# SnackerEngine-Demo

./: .gitignore  SnackerEngine Demo.sln
Chat Application/: Chat Application.vcxproj  main.cpp
Chat Application/resources/fonts/loaded/: Arial  times
Chat Application/resources/gui/: chatRoomHost.json  mainMenu.json  textMessage.json
Chat Application/resources/shaders/: basicTexture.shader
Chat Application/resources/shaders/gui/: simpleAlphaColor.shader
Chat Application/resources/shaders/pbr/: pbr_IBL_textured.shader
GUI Demo/: GUI Demo.vcxproj  main.cpp
GUI Demo/resources/test/: WeightedHorizontalLayout.json  animationTest.json  gridLayoutTest.json  normalDebugWindow.json  selectionBoxTest.json  temp.json  testListLayouts.json  testMultipleWindows.json
Model Loading Rave Party/: Model Loading Rave Party.vcxproj  main.cpp
Network test/: Network test.vcxproj  main.cpp
SERP Server/: Client.h  Makefile  SERP Server.vcxproj  SERP Server.vcxproj.filters  Server.cpp  Server.h  cmake_install.cmake  main.cpp  terminateServer.cpp
SERP Server 2/: Client.cpp  Client.h  SERP Server 2.vcxproj  Server.cpp  Server.h  main.cpp
SERP_Server/: CMakeCache.txt  CMakeLists.txt  Client.cpp  SERPServer  SERP_Server.vcxproj  Server.cpp  startSERPServer  startServer.cpp  terminateSERPServer
Textured Scene/: Textured Scene.vcxproj  main.cpp
resources/fonts/loaded/: DejaVuSans  DroidSans
resources/gui/: chatRoomJoin.json  guiStyle.json
resources/shaders/: basic.shader
resources/shaders/pbr/: pbr_direct.shader  pbr_textured.shader
(+11 files in other folders)
